components/crud-web-apps/image-builder/manifests/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: builder-web-app
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - headers:
      request:
        add:
          x-forwarded-prefix: /builder
    match:
    - uri:
        prefix: /builder/
    rewrite:
      uri: /
    route:
    - destination:
        host: builder-web-app-service.kubeflow.svc.local
        port:
          number: 80
